Add group name title to top of the screen, and make groups list on the backend.

--- a/public/styles.css
+++ b/public/styles.css
@@ -195,3 +195,9 @@ input {
 ::-webkit-scrollbar {
     display: none;
 }
+#group_name {
+    position: absolute;
+    top: 5vh;
+    left: 50vw;
+    transform: translateX(-50%);
+}
